--- a/package.json
+++ b/package.json
@@ -11,23 +11,22 @@
     "native-base": "^2.3.7",
     "react": "16.2.0",
     "react-native": "0.52.2",
+    "react-native-admob": "^2.0.0-beta.4",
     "react-native-button": "^2.2.0",
     "react-native-confirmation-code-input": "^1.0.4",
     "react-native-datepicker": "^1.6.0",
     "react-native-document-picker": "^2.1.0",
-    "react-native-drawer-menu": "^0.2.5",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-onesignal": "^3.0.9",
-    "react-native-photo-grid": "0.0.2",
     "react-native-progress": "^3.4.0",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-share": "^1.0.24",
-    "react-native-socket.io-client": "^1.4.8",
     "react-native-star-rating": "^1.0.8",
     "react-native-youtube": "^1.1.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "url-search-params": "^0.10.0"
   },
   "devDependencies": {
     "babel-jest": "22.1.0",
