--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -15,9 +15,11 @@
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
+org.gradle.parallel=true
 MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
 MYAPP_RELEASE_KEY_ALIAS=my-key-alias
 MYAPP_RELEASE_STORE_PASSWORD=godislove1$
 MYAPP_RELEASE_KEY_PASSWORD=godislove1$
-android.useDeprecatedNdk=true
+android.useDeprecatedNdk=true  
+org.gradle.configureondemand=true
+org.gradle.jvmargs=-Xmx1536m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
