--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "react": "16.2.0",
     "react-native": "0.52.2",
     "react-native-admob": "^2.0.0-beta.4",
+    "react-native-background-timer": "^2.0.0",
     "react-native-button": "^2.2.0",
     "react-native-confirmation-code-input": "^1.0.4",
     "react-native-datepicker": "^1.6.0",
     "react-native-document-picker": "^2.1.0",
     "react-native-fetch-blob": "^0.10.8",
+    "react-native-gifted-chat": "^0.3.0",
     "react-native-onesignal": "^3.0.9",
     "react-native-progress": "^3.4.0",
     "react-native-router-flux": "^4.0.0-beta.28",
-    "react-native-share": "^1.0.24",
+    "react-native-socket.io-client": "^1.4.8",
     "react-native-star-rating": "^1.0.8",
     "react-native-youtube": "^1.1.0",
     "react-redux": "^5.0.6",
