--- a/package.json
+++ b/package.json
@@ -24,11 +24,8 @@
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-socket.io-client": "^1.4.8",
     "react-native-star-rating": "^1.0.8",
-    "react-native-youtube": "^1.1.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
-    "url-search-params": "^0.10.0"
+    "react-native-youtube": "^1.1.0"
+    
   },
   "devDependencies": {
     "babel-jest": "22.1.0",
