--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -124,7 +124,7 @@ android {
         abi {
             reset()
             enable enableSeparateBuildPerCPUArchitecture
-            universalApk false  // If true, also generate a universal APK
+            universalApk true  // If true, also generate a universal APK
             include "armeabi-v7a", "x86"
         }
     }
@@ -151,6 +151,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-image-picker')
+    compile project(':react-native-onesignal')
     compile project(':react-native-background-timer')
     compile project(':react-native-admob')
     compile project(':react-native-document-picker')
