--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "react-native-document-picker": "^2.1.0",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-gifted-chat": "^0.3.0",
+    "react-native-image-picker": "^0.26.7",
     "react-native-onesignal": "^3.0.9",
+    "react-native-photo-grid": "0.0.2",
     "react-native-progress": "^3.4.0",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-socket.io-client": "^1.4.8",
     "react-native-star-rating": "^1.0.8",
-    "react-native-youtube": "^1.1.0"
-    
+    "react-native-youtube": "^1.1.0",
+    "url-search-params": "^0.10.0",
+    "url-search-params-polyfill": "^2.0.3"
   },
   "devDependencies": {
     "babel-jest": "22.1.0",
