--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "babel-jest": "22.1.0",
     "babel-preset-react-native": "4.0.0",
+    "eslint-config-rallycoding": "^3.2.0",
     "jest": "22.1.4",
     "react-test-renderer": "16.2.0"
   },
